components/test-component-lsoy/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-app-jxce
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: test-component-lsoy
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component-lsoy
  namespace: build-e2e-hacbs-ebdk
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component-lsoy
    weight: null
status: {}
